evaluation/test_suite/negative/ub36/2.c
#include <stdio.h>
#include <stdint.h>

int main()
{
    uint64_t x = 0x5f3759df;
    printf("%f\n", (double)x);
}
